Removing some warnings